[package]
name = "Api"
version = "0.1.0"
edition = "2021"

[dependencies]
mvlogger = "0.4.0"
mvutils = "1.3.4"
mvengine = { path = "../../MVEngineRev" }
mvengine_proc = { path = "../../MVEngineRev/Proc", package = "mvengine-proc-macro" }

log = "0.4.25"
parking_lot = "0.12.3"
libloading = "0.8.6"
bytebuffer = "2.3.0"
rand = "0.9.0"
hashbrown = "0.15.2"
noise = "0.9.0"
lz4_flex = "0.11.3" #compression