[package]
name = "ModPacker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.142"
mvutils = "1.5.2"
bytebuffer = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
walkdir = "2.5.0"
toml_edit = "0.23.3"
pathdiff = "0.2.3"